--- a/module-3-solution/css/style.css
+++ b/module-3-solution/css/style.css
@@ -79,7 +79,7 @@ body
 	width:90%;
 	margin-left: auto;
 	margin-right: auto; 
-	background-color: #6D3300;
+	background-color: #462100;
 	padding:20px;
 	border-radius: 10px;
 }
